--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "react-router": "1.0.2",
     "semantic-ui": "^2.1.8",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "webpack": "^1.13.1"
   }
 }
