--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^0.14.2",
     "react-modal": "^1.1.1",
     "react-router": "1.0.2",
+    "scroll-into-view": "^1.6.0",
     "semantic-ui": "^2.1.8",
     "serve-favicon": "~2.3.0"
   },
