fix postinstall script (hopefully)

--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "webpack": "^1.13.1"
   },
   "scripts": {
-    "postinstall": "webpack -p --config ./webpack.prod.config.js --progress"
+    "postinstall": "webpack -p --config ./webpack.config.js --progress"
   }
 }
