--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "webpack -p --config ./webpack.config.js --progress"
   },
   "dependencies": {
+    "axios": "^0.12.0",
     "babel-core": "^6.1.4",
     "babel-loader": "^6.1.0",
     "babel-preset-react": "^6.1.4",
