--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.4.20",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
+    "passport-fitbit-oauth2": "^1.0.1",
     "passport-local": "^1.0.0",
     "react": "^0.14.8",
     "react-addons-linked-state-mixin": "^0.14.4-alpha.2",
