--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^0.14.2",
     "react-modal": "^1.1.1",
     "react-router": "1.0.2",
+    "react-scroll": "^1.0.21",
     "react-sticky": "^5.0.4",
     "scroll-into-view": "^1.6.0",
     "semantic-ui": "^2.2",
