--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-fitbit-oauth2": "^1.0.1",
+    "passport-lastfm": "^1.0.1",
     "passport-local": "^1.0.0",
     "rd3": "^0.6.5",
     "react": "^0.14.8",
