add lastFM passport router and lastFM model template

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "flux": "^2.1.1",
     "gulp": "^3.9.1",
     "history": "1.13.x",
+    "lodash": "^4.13.1",
     "moment": "^2.14.1",
     "mongoose": "^4.4.20",
     "morgan": "~1.6.1",
