--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "lodash": "^4.13.1",
     "moment": "^2.14.1",
     "mongoose": "^4.4.20",
-    "mongoose-validator": "^1.2.5",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-fitbit-oauth2": "^1.0.1",
@@ -48,6 +47,7 @@
     "semantic-ui": "^2.2",
     "sendgrid": "^4.0.1",
     "serve-favicon": "~2.3.0",
+    "validator": "^5.6.0",
     "webpack": "^1.13.1"
   },
   "devDependencies": {
