--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react": "^6.1.4",
     "bcrypt": "^0.8.6",
     "body-parser": "~1.13.2",
+    "chart.js": "^1.1.1",
     "compression": "^1.6.2",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "~1.3.5",
@@ -37,8 +38,9 @@
     "rd3": "^0.6.5",
     "react": "^0.14.8",
     "react-addons-linked-state-mixin": "^0.14.4-alpha.2",
+    "react-chartjs": "^0.8.0",
     "react-d3-basic": "^1.6.11",
-    "react-dom": "^0.14.2",
+    "react-dom": "^0.14.8",
     "react-modal": "^1.1.1",
     "react-router": "1.0.2",
     "react-scroll": "^1.0.21",
