--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-lastfm": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-rescuetime": "^0.2.0",
+    "passport-strava": "^0.2.0",
     "rd3": "0.7.2",
     "react": "^0.14.8",
     "react-addons-linked-state-mixin": "^0.14.4-alpha.2",
