fixed all production bugs of find influencers

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "passport-rescuetime": "^0.2.0",
     "passport-strava": "^0.2.0",
     "rd3": "0.7.2",
-    "react": "^0.14.8",
+    "react": "^0.15.3",
     "react-addons-linked-state-mixin": "^0.14.4-alpha.2",
     "react-chartjs": "^0.8.0",
     "react-d3-basic": "^1.6.11",
@@ -46,6 +46,7 @@
     "react-router": "1.0.2",
     "react-scroll": "^1.0.21",
     "react-sticky": "^5.0.4",
+    "recharts": "^0.15.0",
     "scroll-into-view": "^1.6.0",
     "semantic-ui": "^2.2",
     "sendgrid": "^4.0.1",
