--- a/package.json
+++ b/package.json
@@ -37,11 +37,11 @@
     "passport-rescuetime": "^0.2.0",
     "passport-strava": "^0.2.0",
     "rd3": "0.7.2",
-	"react": "^0.14.8",
-    "react-addons-linked-state-mixin": "^0.14.4-alpha.2",
+	"react": "^15.3.2",
+    "react-addons-linked-state-mixin": "^15.3.2",
     "react-chartjs": "^0.8.0",
     "react-d3-basic": "^1.6.11",
-    "react-dom": "^0.14.8",
+    "react-dom": "^15.3.2",
     "react-modal": "^1.4.0",
     "react-router": "1.0.2",
     "react-scroll": "^1.0.21",
