--- a/package.json
+++ b/package.json
@@ -8,17 +8,15 @@
   },
   "dependencies": {
     "async": "^2.0.0",
-    "axios": "^0.12.0",
+    "axios": "^0.14.0",
     "babel-core": "^6.1.4",
     "babel-loader": "^6.1.0",
     "babel-preset-react": "^6.1.4",
     "bcrypt": "^0.8.6",
     "body-parser": "~1.13.2",
-    "chart.js": "^1.1.1",
     "compression": "^1.6.2",
     "connect-mongo": "^1.1.0",
     "cookie-parser": "~1.3.5",
-    "d3": "^3.5.17",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
@@ -34,16 +32,12 @@
     "passport-fitbit-oauth2": "^1.0.1",
     "passport-lastfm": "^1.0.1",
     "passport-local": "^1.0.0",
-    "passport-rescuetime": "^0.2.0",
     "passport-strava": "^0.2.0",
-    "rd3": "0.7.2",
     "react": "^15.3.2",
     "react-addons-linked-state-mixin": "^15.3.2",
-    "react-chartjs": "^0.8.0",
-    "react-d3-basic": "^1.6.11",
     "react-dom": "^15.3.2",
     "react-modal": "^1.4.0",
-    "react-router": "1.0.2",
+    "react-router": "^2.8.1",
     "react-scroll": "^1.0.21",
     "react-sticky": "^5.0.4",
     "recharts": "^0.15.0",
